2008-05-16	Eric Norum <norume@aps.anl.gov>

    * Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Use
    shared version of bootstrap to set up workspace.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all
	BSPs.

2008-04-24	Eric Norum <norume@aps.anl.gov>

    * startup/bspstart.c: More clean up of FPGA interrupts.

2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Remove all references to console_reserve_resources
	and termios_reserve_resources.

2008-04-07	Eric Norum <norume@aps.anl.gov>

    * startup/bspstart.c: Clean up non-FPGA use of EPORT interrupts.

2008-04-07	Eric Norum <norume@aps.anl.gov>

    * network/network.c: Track half/fullduplex changes from 4.7 branch.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, include/bsp.h: Correct prototype of idle thread. Eric
	Norum pointed out this was wrong.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, include/bsp.h, startup/bspstart.c: Eliminate copies of
	the Configuration Table. Use the RTEMS provided accessor macros to
	obtain configuration fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
