@@ -27,9 +27,7 @@ dist_project_lib_DATA += startup/linkcmds
 
 startup_SOURCES = startup/bspclean.c ../../shared/bsplibc.c \
     ../../shared/bsppost.c ../../shared/bsppredriverhook.c \
-    ../../shared/bsppretaskinghook.c \
-    ../../m68k/shared/m68kbspgetworkarea.c \
-    startup/init5282.c \
+    ../../m68k/shared/m68kpretaskinghook.c startup/init5282.c \
     startup/bspstart.c ../../shared/bootcard.c ../../shared/sbrk.c \
     ../../m68k/shared/setvec.c ../../shared/gnatinstallhandler.c
 clock_SOURCES = clock/clock.c
