@@ -166,6 +166,7 @@ SECTIONS
         . = ALIGN (16);
         PROVIDE (end = .);
         _clear_end = .;
+        _WorkspaceBase = .;
     } >ram
 
   /* Stabs debugging sections.  */
